# boostcamp-product-serving

./: .gitignore
.github/workflows/: deploy_docker.yml  deploy_ssh.yml
part2/01_voila/: 01_03_baseline.ipynb  01_voila.ipynb  02_ipywidget-basic.ipynb  03_baseline.ipynb  install_packages.sh
part2/02_streamlit/: 02_01_streamlit.ipynb  app.py
part2/03_Linux-and-Shell-Command/: 03_01_Shell-Command.ipynb  fruits.txt  test.txt
part2/04_cloud/: 04_01_cloud.ipynb
part2/05_Github-Action_CI-CD/: 05_01_Github-Action_CI-CD.ipynb  Dockerfile  app.py  config.yaml  requirements.txt
part3/01_fastapi/: 01_01_fastapi.ipynb  pyproject.toml
part3/01_fastapi/app/: main.py
part3/01_fastapi/examples/: 02_path_parameter.py  03_query_parameter.py  04_optional_parameter.py  05_request_body.py  06_response_body.py  07_form.py  08_file.py  09_validation.py  10_config.py  11_event_handler.py  12_api_router.py  13_exception_handling.py  14_background_tasks.py  15_test_client.py  dev_config.yaml
part3/02_docker/: 02_01_docker.ipynb  Dockerfile  docker-compose.yml  main.py  requirements.txt
part3/03_logging/: 03_01_logging.ipynb  requirements.txt
part3/03_logging/app/: README.md  logger.py
part3/03_logging/examples/: dynamic_logger.py  json_logging.py  logging_module.py
part3/04_mlflow/: 04_01_mlflow.ipynb  mlflow.db  requirements.txt
part4/01_bentoml/: 01_01_BentoML.ipynb  requirements.txt
part4/02_airflow/: 02_01_airflow.ipynb  airflow.cfg  airflow.db
part4/03_ml-design-pattern/: 03_01_ml-design-pattern.ipynb
part4/04_further-studying/: 04_01_further-studying.ipynb
(+11 files in other folders)
